Fixed dark mode switch

--- a/styles.css
+++ b/styles.css
@@ -882,6 +882,17 @@ div.bp-head {
     box-shadow: var(--card-bs);
 }
 
+#theme-switch-container {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    overflow: hidden;
+}
+
+.theme-switching * {
+    transition: background 1000ms ease;
+}
+
 
 body:not(.DESIGN-MODE) .DESIGN-MODE {
     display: none;
